Login and Register UI

--- a/PaperNotesAndRecomendationsWeb/src/main/js/app/index.html
+++ b/PaperNotesAndRecomendationsWeb/src/main/js/app/index.html
@@ -11,5 +11,9 @@
 
 <script src="/globalres/js/index.bundle.js"></script>
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap-theme.min.css">
+
 </body>
 </html>
