Changes in frontend. More bautiful UI.

--- a/PaperNotesAndRecomendationsWeb/src/main/js/app/index.html
+++ b/PaperNotesAndRecomendationsWeb/src/main/js/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" media="screen" href="/globalres/js/index.css" />
     <title>Paper Notes And Recomendations</title>
 </head>
 
